# aimgbox

./: .dockerignore  .env  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
aimg/: __main__.py
aimg/admin/: app.py  audit.py  auth.py  csv_export.py  decorators.py  middleware.py  pagination.py
aimg/api/: app.py  dependencies.py  envelope.py  errors.py  middleware.py
aimg/common/: connections.py  encryption.py  health.py  i18n.py  logging.py  pagination.py  settings.py
aimg/db/: models.py
aimg/jobs/: context.py  fields.py  registry.py
aimg/providers/: base.py  failing_mock.py  mock.py  replicate.py
aimg/scripts/: create_admin.py  reconcile.py  seed.py  sync_job_types.py
aimg/services/: auth.py  billing.py  rate_limit.py  webhooks.py
aimg/worker/: main.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_webhook_deliveries.py  003_admin_users_and_audit_log.py  004_seed_providers_and_job_types.py
docs/: partner-integration-guide.md
locales/: en.json  ru.json
scripts/: test_full_flow.py  test_real_flow.py
specs/: 01-business-context.md  02-architecture.md  03-job-handlers.md  04-database-schema.md  05-api.md  06-business-logic.md  07-admin-and-operations.md  DEVELOPMENT_PLAN.md  README.md  naive_tech_assignment.md  technical_specification.md
tests/e2e/: conftest.py  test_admin.py  test_flow.py  test_health.py
tests/functional/: conftest.py  test_admin_auth_flow.py  test_admin_dashboard.py  test_admin_integrations.py  test_admin_jobs.py  test_admin_keys.py  test_auth.py  (+21 more)
(+88 files in other folders)
