[project]
name = "aimg"
version = "1.0.0"
description = "B2B2C API for AI image processing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "aiobotocore>=2.15.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "alembic>=1.14.0",
    "sqlalchemy[asyncpg]>=2.0.36",
    "greenlet>=3.0.0",
    "starlette>=0.41.0",
    "jinja2>=3.1.4",
    "httpx>=0.28.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.12",
    "cryptography>=43.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
